[package]
name = "android-bt-parser"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.19.0"
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
regex = "1.7.0"
